--- a/themes/foundation/templates/home/index.twig
+++ b/themes/foundation/templates/home/index.twig
@@ -5,15 +5,10 @@
 {% block content %}
     {% include '@theme/helper/sitelinks-search.twig' only %}
 
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <h1>Welcome</h1>
-
-                {% embed '@theme/helper/recommended-products.twig' with {'products': recommendedProducts } only %}
-                    {% block title %}Recommended for you{% endblock %}
-                {% endembed %}
-            </div>
-        </div>
+    <div class="row column">
+        <h1>Welcome</h1>
+        {% embed '@theme/helper/recommended-products.twig' with {'products': recommendedProducts } only %}
+            {% block title %}Recommended for you{% endblock %}
+        {% endembed %}
     </div>
 {% endblock %}
