--- a/themes/foundation/templates/layout/parts/header.twig
+++ b/themes/foundation/templates/layout/parts/header.twig
@@ -1,43 +1,43 @@
-<div id="header">
-    <div class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><i class="fa fa-align-justify"></i></button>
-                <a class="navbar-brand" href="{{ routeUrl('home') }}">{{ SITE_NAME | default('Kommerce') }}</a>
-            </div>
+<div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
+    <button class="menu-icon" type="button" data-toggle="example-menu"></button>
+    <div class="title-bar-title">Menu</div>
+</div>
 
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right text-center">
-                    {% if user is not empty %}
-                        <li>
-                            <a href="{{ routeUrl('logout') }}">Sign Out</a>
-                        </li>
-                        <li class="divider-vertical hidden-xs"></li>
-                        <li>
-                            <a href="{{ routeUrl('user.account') }}">Account</a>
-                        </li>
-                    {% else %}
-                        <li>
-                            <a href="{{ routeUrl('user.login') }}">Sign In</a>
-                        </li>
-                    {% endif %}
-
-                    <li class="divider-vertical hidden-xs"></li>
-
-                    <li>
-                        <a href="{{ routeUrl('cart.get.show') }}"><i class="fa fa-shopping-cart"></i> Cart</a>
-                        {# TODO:
-                            <?php if ($cart !== null && $cart->totalQuantity > 0) { ?>
-                                (<?=$cart->totalQuantity?>)
-                            <?php } ?>
-                        #}
-                    </li>
-                </ul>
-
-                <div class="col-sm-3 navbar-right">
-                    {% include '@theme/helper/site-search.twig' only %}
-                </div>
-            </div>
-        </div>
+<div class="top-bar" id="example-menu">
+    <div class="top-bar-left">
+        <ul class="dropdown menu" data-dropdown-menu>
+            <li class="menu-text">
+                {#<a class="navbar-brand" href="{{ routeUrl('home') }}">#}
+                    {{ SITE_NAME | default('Kommerce') }}
+                {#</a>#}
+            </li>
+            <li>
+                <a href="{{ routeUrl('cart.get.show') }}"><i class="fa fa-shopping-cart"></i> Cart</a>
+                {# TODO:
+                    <?php if ($cart !== null && $cart->totalQuantity > 0) { ?>
+                        (<?=$cart->totalQuantity?>)
+                    <?php } ?>
+                #}
+            </li>
+            <li><input type="search" placeholder="Search"></li>
+            <li><button type="button" class="button">Search</button></li>
+        </ul>
+    </div>
+    <div class="top-bar-right">
+        <ul class="menu">
+            {% if user is not empty %}
+                <li>
+                    <a href="{{ routeUrl('logout') }}">Sign Out</a>
+                </li>
+                <li class="divider-vertical hidden-xs"></li>
+                <li>
+                    <a href="{{ routeUrl('user.account') }}">Account</a>
+                </li>
+            {% else %}
+                <li>
+                    <a href="{{ routeUrl('user.login') }}">Sign In</a>
+                </li>
+            {% endif %}
+        </ul>
     </div>
 </div>
