--- a/themes/foundation/templates/admin/product/parts/product-list.twig
+++ b/themes/foundation/templates/admin/product/parts/product-list.twig
@@ -1,23 +1,23 @@
 {# @var products \inklabs\kommerce\EntityDTO\ProductDTO[] #}
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
-        <tr>
-            {% include '@theme/admin/product/parts/product-list-head.twig' %}
-            {% block thead %}{% endblock %}
-        </tr>
+    <tr>
+        {% include '@theme/admin/product/parts/product-list-head.twig' %}
+        {% block thead %}{% endblock %}
+    </tr>
     </thead>
     <tbody>
-        {% for product in products %}
-            <tr>
-                {% include '@theme/admin/product/parts/product-list-body.twig' %}
-                {% block tbody %}{% endblock %}
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="100%">
-                    <span class="text-muted">No products.</span>
-                </td>
-            </tr>
-        {% endfor %}
+    {% for product in products %}
+        <tr>
+            {% include '@theme/admin/product/parts/product-list-body.twig' %}
+            {% block tbody %}{% endblock %}
+        </tr>
+    {% else %}
+        <tr>
+            <td colspan="100%">
+                <span class="text-muted">No products.</span>
+            </td>
+        </tr>
+    {% endfor %}
     </tbody>
 </table>
