--- a/themes/foundation/templates/helper/recommended-products.twig
+++ b/themes/foundation/templates/helper/recommended-products.twig
@@ -1,13 +1,6 @@
 {% if products is not empty %}
-    <div class="row">
-        <div class="col-sm-12">
-            <hr />
-            <h2 class="text-center">{% block title %}You Might Also Like{% endblock %}</h2>
-            {% if size == 'small' %}
-                {% include '@theme/helper/product-grid-small.twig' with {'products': products } only %}
-            {% else %}
-                {% include '@theme/helper/product-grid.twig' with {'products': products } only %}
-            {% endif %}
-        </div>
+    <h2 class="text-center">{% block title %}You Might Also Like{% endblock %}</h2>
+    <div class="row small-up-2 medium-up-3 large-up-4">
+            {% include '@theme/helper/product-grid-small.twig' with {'products': products } only %}
     </div>
 {% endif %}
