--- a/themes/foundation/templates/layout/parts/footer.twig
+++ b/themes/foundation/templates/layout/parts/footer.twig
@@ -14,3 +14,8 @@
         <?php } ?>
     #}
 </div>
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+<script>
+    $(document).foundation();
+</script>
