Add extraScripts block and vuejs cdn.

--- a/themes/foundation/templates/layout/base-admin.twig
+++ b/themes/foundation/templates/layout/base-admin.twig
@@ -17,5 +17,6 @@
     {% include '@theme/layout/parts/base-modal.twig' %}
     {% include '@theme/layout/parts/footer.twig' %}
     {% include '@theme/layout/parts/javascript.twig' %}
+    {% block extraScripts %}{% endblock %}
 </body>
 </html>
