--- a/themes/foundation/templates/layout/base.twig
+++ b/themes/foundation/templates/layout/base.twig
@@ -16,5 +16,7 @@
     </div>
     {% include '@theme/layout/parts/base-modal.twig' %}
     {% include '@theme/layout/parts/footer.twig' %}
+    {% include '@theme/layout/parts/javascript.twig' %}
+    {% block extraScripts %}{% endblock %}
 </body>
 </html>
