--- a/themes/foundation/templates/layout/parts/javascript.twig
+++ b/themes/foundation/templates/layout/parts/javascript.twig
@@ -1,5 +1,7 @@
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
+<script src="https://unpkg.com/vue/dist/vue.js"></script>
+
 <script>
     $(document).foundation();
 </script>
