--- a/themes/foundation/templates/admin/product/index.twig
+++ b/themes/foundation/templates/admin/product/index.twig
@@ -6,6 +6,14 @@
 {% block pageTitle %}Products{% endblock %}
 
 {% block content %}
+
+        {% raw %}
+        <div id="app">
+            <p>{{ count }}</p>
+            <button class="button" v-on:click="addOne">Click</button>
+        </div>
+        {% endraw %}
+
         <div class="row column">
             <a href="{{ routeUrl('admin.product.new') }}"
                class="btn btn-success btn-xs">
@@ -23,4 +31,23 @@
             {% include '@theme/admin/product/parts/product-list.twig' with {'products': products} only %}
             {{ paginate.detailed(pagination) }}
         </div>
+
+
+
+{% endblock %}
+
+{% block extraScripts %}
+    <script>
+        var app = new Vue({
+            el: '#app',
+            data: {
+                count: 0
+            },
+            methods: {
+                addOne() {
+                    this.count++
+                }
+            }
+        });
+    </script>
 {% endblock %}
