--- a/themes/foundation/templates/admin/product/parts/navigation.twig
+++ b/themes/foundation/templates/admin/product/parts/navigation.twig
@@ -27,8 +27,6 @@
     }
 ] %}
 
-<div class="row">
-    <div class="col-sm-12">
-        {% include '@theme/helper/tab-navigation.twig' with {'navigation': navigation} %}
-    </div>
+<div class="row column">
+    {% include '@theme/helper/tab-navigation.twig' with {'navigation': navigation} %}
 </div>
