--- a/themes/foundation/templates/admin/product/attributes.twig
+++ b/themes/foundation/templates/admin/product/attributes.twig
@@ -8,8 +8,7 @@
 
         {% include '@theme/admin/product/parts/header.twig' %}
 
-        <div class="row">
-            <div class="col-sm-12">
+        <div class="row column">
                 {% embed '@theme/admin/product/parts/product-attributes-list.twig' with {'productAttributes': product.productAttributes} %}
                     {% block thead %}
                         <th class="text-right">Actions</th>
@@ -17,7 +16,7 @@
                     {% block tbody %}
                         <td class="text-right">
                             <a href="{{ routeUrl('admin.attribute.attribute-values', {'attributeId': productAttribute.attribute.id.hex}) }}"
-                               class="btn btn-default btn-xs">
+                               class="button alert small">
                                 View
                             </a>
                             <form action="{{ routeUrl('admin.product.remove-attribute-value') }}"
@@ -27,16 +26,14 @@
                                 {{ form.hidden('productId', product.id.hex) }}
                                 {{ form.hidden('productAttributeId', productAttribute.id.hex) }}
 
-                                <button type="submit" class="btn btn-danger btn-xs"><i class="fa fa-minus"></i></button>
+                                <button type="submit" class="button danger small"><i class="fa fa-minus"></i></button>
                             </form>
                         </td>
                     {% endblock %}
                 {% endembed %}
-            </div>
         </div>
 
-        <div class="row">
-            <div class="col-sm-12">
+        <div class="row column">
                 <h4>Add Attribute Value:</h4>
                 <form action="{{ routeUrl('admin.product.add-attribute-value') }}"
                       method="post">
@@ -50,11 +47,10 @@
                                class="form-control"/>
 
                         <span class="input-group-btn">
-                            <button type="submit" class="btn btn-default"><i class="fa fa-plus"></i> Add</button>
+                            <button type="submit" class="button alert"><i class="fa fa-plus"></i> Add</button>
                         </span>
                     </div>
                 </form>
-            </div>
         </div>
 
     </div>
