Cleaning up html and tables.

--- a/themes/foundation/templates/admin/attribute/parts/attribute-list.twig
+++ b/themes/foundation/templates/admin/attribute/parts/attribute-list.twig
@@ -1,5 +1,5 @@
 {# @var attributes \inklabs\kommerce\EntityDTO\AttributeDTO[] #}
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             <th>Name</th>
