--- a/themes/foundation/templates/admin/attribute/parts/attribute-values-list.twig
+++ b/themes/foundation/templates/admin/attribute/parts/attribute-values-list.twig
@@ -1,5 +1,5 @@
 {# @var attributeValues \inklabs\kommerce\EntityDTO\AttributeValueDTO[] #}
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             <th>Name</th>
