--- a/themes/foundation/templates/admin/coupon/parts/coupon-list.twig
+++ b/themes/foundation/templates/admin/coupon/parts/coupon-list.twig
@@ -1,5 +1,5 @@
 {# @var coupons \inklabs\kommerce\EntityDTO\CouponDTO[] #}
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             <th>Code</th>
