--- a/themes/foundation/templates/admin/option/parts/option-list.twig
+++ b/themes/foundation/templates/admin/option/parts/option-list.twig
@@ -1,5 +1,5 @@
 {# @var options \inklabs\kommerce\EntityDTO\OptionDTO[] #}
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             <th>Name</th>
