--- a/themes/foundation/templates/admin/option/parts/option-product-list.twig
+++ b/themes/foundation/templates/admin/option/parts/option-product-list.twig
@@ -1,5 +1,5 @@
 {# @var optionProducts \inklabs\kommerce\EntityDTO\OptionProductDTO[] #}
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             {% include '@theme/admin/product/parts/product-list-head.twig' %}
