--- a/themes/foundation/templates/admin/order/parts/order-list.twig
+++ b/themes/foundation/templates/admin/order/parts/order-list.twig
@@ -1,5 +1,5 @@
 {# @var orders \inklabs\kommerce\EntityDTO\OrderDTO[] #}
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             <th>Reference #</th>
