--- a/themes/foundation/templates/admin/order/view.twig
+++ b/themes/foundation/templates/admin/order/view.twig
@@ -34,7 +34,7 @@
                         </div>
                         <div class="col-sm-4">
                             <strong>Order Summary</strong>
-                            <table class="table table-condensed totals-table">
+                            <table class="table stack totals-table">
                                 <tbody>
                                 <tr>
                                     <td>Subtotal:</td>
