--- a/themes/foundation/templates/admin/product/parts/option-list.twig
+++ b/themes/foundation/templates/admin/product/parts/option-list.twig
@@ -1,6 +1,6 @@
 {# @var optionProducts \inklabs\kommerce\EntityDTO\OptionProductDTO[] #}
 <h3>Product Options</h3>
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             <th>Name</th>
