--- a/themes/foundation/templates/admin/product/parts/product-attributes-list.twig
+++ b/themes/foundation/templates/admin/product/parts/product-attributes-list.twig
@@ -1,6 +1,6 @@
 {# @var productAttributes \inklabs\kommerce\EntityDTO\ProductAttributeDTO[] #}
 <h3>Product Attributes</h3>
-<table class="table table-condensed">
+<table class="table">
     <thead>
         <tr>
             <th>Attribute</th>
