--- a/themes/foundation/templates/admin/promotion/cart-price-rule/parts/cart-price-rule-list.twig
+++ b/themes/foundation/templates/admin/promotion/cart-price-rule/parts/cart-price-rule-list.twig
@@ -1,5 +1,5 @@
 {# @var cartPriceRules \inklabs\kommerce\EntityDTO\CartPriceRuleDTO[] #}
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             <th>Name</th>
