--- a/themes/foundation/templates/admin/promotion/catalog-promotion/parts/catalog-promotion-list.twig
+++ b/themes/foundation/templates/admin/promotion/catalog-promotion/parts/catalog-promotion-list.twig
@@ -1,5 +1,5 @@
 {# @var catalogPromotions \inklabs\kommerce\EntityDTO\CatalogPromotionDTO[] #}
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             <th>Name</th>
