--- a/themes/foundation/templates/admin/settings/sales-tax/index.twig
+++ b/themes/foundation/templates/admin/settings/sales-tax/index.twig
@@ -25,7 +25,7 @@
                     <span class="text-muted">No zipcode rates</span>
                 {% else %}
                     <h3>Zipcode Rates</h3>
-                    <table class="table table-condensed table-striped">
+                    <table class="table stack table-striped">
                         <thead>
                             <tr>
                                 <th>Zipcode</th>
@@ -50,7 +50,7 @@
                     <span class="text-muted">No zipcode range rates</span>
                 {% else %}
                     <h3>Zipcode Range Rates</h3>
-                    <table class="table table-condensed table-striped">
+                    <table class="table stack table-striped">
                         <thead>
                             <tr>
                                 <th>Zipcodes</th>
@@ -75,7 +75,7 @@
                     <span class="text-muted">No state rates</span>
                 {% else %}
                     <h3>State Rates</h3>
-                    <table class="table table-condensed table-striped">
+                    <table class="table stack table-striped">
                         <thead>
                             <tr>
                                 <th>State</th>
