--- a/themes/foundation/templates/admin/tag/parts/option-list.twig
+++ b/themes/foundation/templates/admin/tag/parts/option-list.twig
@@ -1,7 +1,7 @@
 {# @var options \inklabs\kommerce\EntityDTO\OptionDTO[] #}
 {# @var tag \inklabs\kommerce\EntityDTO\TagDTO[] #}
 <h3>Options</h3>
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             <th>Name</th>
