--- a/themes/foundation/templates/admin/tag/parts/tag-list.twig
+++ b/themes/foundation/templates/admin/tag/parts/tag-list.twig
@@ -1,5 +1,5 @@
 {# @var tags \inklabs\kommerce\EntityDTO\TagDTO[] #}
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             <td></td>
