--- a/themes/foundation/templates/admin/tag/parts/text-option-list.twig
+++ b/themes/foundation/templates/admin/tag/parts/text-option-list.twig
@@ -1,6 +1,6 @@
 {# @var textOptions \inklabs\kommerce\EntityDTO\TextOption[] #}
 <h3>Text Options</h3>
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             <th>Name</th>
