--- a/themes/foundation/templates/admin/tools/ad-hoc-shipment/parts/shipment-tracker-list.twig
+++ b/themes/foundation/templates/admin/tools/ad-hoc-shipment/parts/shipment-tracker-list.twig
@@ -1,5 +1,5 @@
 {# @var shipmentTrackers \inklabs\kommerce\EntityDTO\ShipmentTrackerDTO[] #}
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             <th>Carrier</th>
