--- a/themes/foundation/templates/admin/attribute/attribute-value/parts/product-attributes-list.twig
+++ b/themes/foundation/templates/admin/attribute/attribute-value/parts/product-attributes-list.twig
@@ -1,5 +1,5 @@
 {# @var productAttributes \inklabs\kommerce\EntityDTO\ProductAttributeDTO[] #}
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             {% include '@theme/admin/product/parts/product-list-head.twig' %}
