--- a/themes/foundation/templates/admin/product/parts/add-product-form.twig
+++ b/themes/foundation/templates/admin/product/parts/add-product-form.twig
@@ -5,14 +5,12 @@
     {{ form.csrf() }}
     {% block formtop %}{% endblock %}
 
-    <div class="input-group col-sm-4">
         <input type="text"
                name="productId"
-               value=""
-               class="form-control"/>
+               value=""/>
 
-        <span class="input-group-btn">
-            <button type="submit" class="btn btn-default"><i class="fa fa-plus"></i> Add</button>
-        </span>
-    </div>
+            <button type="submit" class="button">
+                <i class="fa fa-plus"></i> 
+                Add
+            </button>
 </form>
