--- a/themes/foundation/templates/admin/product/parts/set-default-image.twig
+++ b/themes/foundation/templates/admin/product/parts/set-default-image.twig
@@ -2,21 +2,24 @@
     <div class="label label-primary pull-right">Default</div>
 
     <form action="{{ routeUrl('admin.product.unset-default-image') }}"
-          method="post"
-          class="form-inline">
+          method="post">
         {{ form.csrf() }}
         {{ form.hidden('productId', product.id.hex) }}
 
-        <button type="submit" class="btn btn-danger btn-xs"><i class="fa fa-minus-circle"></i> Unset Default</button>
+        <button type="submit" class="button alert">
+            <i class="fa fa-minus-circle"></i> 
+            Unset Default
+        </button>
     </form>
 {% else %}
     <form action="{{ routeUrl('admin.product.set-default-image') }}"
-          method="post"
-          class="form-inline">
+          method="post">
         {{ form.csrf() }}
         {{ form.hidden('productId', product.id.hex) }}
         {{ form.hidden('imageId', image.id.hex) }}
 
-        <button type="submit" class="btn btn-default btn-xs">Set Default</button>
+        <button type="submit" class="button">
+            Set Default
+        </button>
     </form>
 {% endif %}
