--- a/themes/foundation/templates/admin/user/parts/user-list.twig
+++ b/themes/foundation/templates/admin/user/parts/user-list.twig
@@ -1,5 +1,5 @@
 {# @var users \inklabs\kommerce\EntityDTO\UserDTO[] #}
-<table class="table table-condensed">
+<table class="table stack">
     <thead>
         <tr>
             <th>External ID</th>
